--- a/desafio-7.html
+++ b/desafio-7.html
@@ -8,7 +8,7 @@
 </head>
 <header>
 	<img src="img/logo03.png" alt="Nirvana">
-	<h1>Desafío clase 6</h1>
+	<h1>Nirvana de nuevo</h1>
 		<nav class="navbar">
 		<a href="">Inicio</a>
 		<div class="desplegable">
