--- a/clase-10-euge.html
+++ b/clase-10-euge.html
@@ -60,6 +60,38 @@
 		<div><p>Item 8</p></div>
 		<div><p>Item 9</p></div>
 	</div>
+
+		<h2>Propiedades Grid ITEM</h2>
+	<h3>Propiedad grid-column-start y grid-column-end</h3>
+	<div class="g-item">
+		<div class="item1"><p>Item 1</p></div>
+		<div><p>Item 2</p></div>
+		<div><p>Item 3</p></div>
+		<div><p>Item 4</p></div>
+		<div class="item5"><p>Item 5</p></div>
+		<div><p>Item 6</p></div>
+		<div><p>Item 7</p></div>
+		<div><p>Item 8</p></div>
+		<div><p>Item 9</p></div>
+		<div><p>Item 10</p></div>
+		<div><p>Item 11</p></div>
+		<div><p>Item 12</p></div>
+	</div>
 	
+	<h3>Propiedad grid-row-start y grid-row-end</h3>
+	<div class="g-item2">
+		<div class="item3"><p>Item 1</p></div>
+		<div><p>Item 2</p></div>
+		<div class="item4"><p>Item 3</p></div>
+		<div><p>Item 4</p></div>
+		<div><p>Item 5</p></div>
+		<div><p>Item 6</p></div>
+		<div><p>Item 7</p></div>
+		<div><p>Item 8</p></div>
+		<div><p>Item 9</p></div>
+		<div><p>Item 10</p></div>
+		<div><p>Item 11</p></div>
+		<div><p>Item 12</p></div>
+	</div>
 </body>
 </html>
